--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
               <h2 class="contact-us-title text-center pt-5">GET IN TOUCH</h2>
-              <form class="pt-3 pb-3">
+              <form class="pt-3 pb-3" netlify>
                 <div class="mb-3">
                   <label for="name" class="form-label">Name</label>
                   <input
