--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
                     id="name"
                     aria-describedby="name"
                     placeholder="Name"
+                    name="name"
                   />
                 </div>
                 <div class="mb-3">
@@ -139,6 +140,7 @@
                     id="company"
                     aria-describedby="company"
                     placeholder="Company"
+                    name="company"
                   />
                 </div>
                 <div class="mb-3">
@@ -149,6 +151,7 @@
                     id="phone"
                     aria-describedby="phone"
                     placeholder="Phone"
+                    name-"phone"
                   />
                 </div>
                 <div class="mb-3">
@@ -158,6 +161,7 @@
                     class="form-control"
                     id="comments"
                     aria-describedby="comments"
+                    name="comments"
                   >
                   </textarea>
                 </div>
