--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     id="phone"
                     aria-describedby="phone"
                     placeholder="Phone"
-                    name-"phone"
+                    name="phone"
                   />
                 </div>
                 <div class="mb-3">
