--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                 At Diesel Core Solutions, we are dedicated to empowering the
                 diesel engine industry with top-notch parts and components.
                 Specializing in both the sale and acquisition of high-quality
-                diesel parts, particularly turbos, our mission is to provide
-                both individual and commercial clients with a comprehensive
+                diesel parts, particularly all diesel cores, our mission is to provide
+                commercial clients with a comprehensive
                 range of products that enhance engine performance and
                 efficiency. Our expert team rigorously tests and meticulously
                 selects every part, ensuring they meet the highest standards of
