--- a/index.html
+++ b/index.html
@@ -90,25 +90,128 @@
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
               <h2 class="wwd-title text-center pt-5 pb-3">WHAT WE DO</h2>
               <p class="wwd-text text-center mb-4">
-                At Diesel Core Solutions, we are dedicated to empowering the
-                diesel engine industry with top-notch parts and components.
-                Specializing in both the sale and acquisition of high-quality
-                diesel parts, particularly all diesel cores, our mission is to provide
-                commercial clients with a comprehensive
-                range of products that enhance engine performance and
-                efficiency. Our expert team rigorously tests and meticulously
-                selects every part, ensuring they meet the highest standards of
-                durability and reliability. Whether you're looking to upgrade
-                your diesel engine or seeking a reliable supplier for your
-                business, we are committed to delivering excellence in every
-                transaction. We don't just sell parts; we offer solutions that
-                drive the diesel world forward.
+                Buyers of all diesel and automotive cores
               </p>
-              <div class="wwd-card">
-                <h3 class="wwd-card-title text-center">BUY</h3>
-              </div>
-              <div class="wwd-card mt-3">
-                <h3 class="wwd-card-title text-center">SELL</h3>
+              <ul>
+                <li>Turbos</li>
+                <li>Injectors</li>
+                <li>High Pressure Oil Pumps</li>
+                <li>Injection Pumps</li>
+                <li>ECMs</li>
+                <li>Transmissions</li>
+                <li>Engines</li>
+              </ul>
+            </div>
+
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-2">
+              <div
+                id="carouselExampleControls"
+                class="carousel carousel-dark slide"
+                data-bs-ride="carousel"
+              >
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img
+                      src="./images/parts-img-1.jpg"
+                      class="d-block"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="./images/parts-img-2.jpg"
+                      class="d-block"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="./images/parts-img-3.jpg"
+                      class="d-block"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="./images/parts-img-4.jpg"
+                      class="d-block"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="./images/parts-img-5.jpg"
+                      class="d-block"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="./images/parts-img-6.jpg"
+                      class="d-block"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="./images/parts-img-7.jpg"
+                      class="d-block"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="./images/parts-img-8.jpg"
+                      class="d-block"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="./images/parts-img-9.jpg"
+                      class="d-block"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="./images/parts-img-10.jpg"
+                      class="d-block"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="./images/parts-img-11.jpg"
+                      class="d-block"
+                      alt="..."
+                    />
+                  </div>
+                </div>
+                <button
+                  class="carousel-control-prev"
+                  type="button"
+                  data-bs-target="#carouselExampleControls"
+                  data-bs-slide="prev"
+                >
+                  <span
+                    class="carousel-control-prev-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button
+                  class="carousel-control-next"
+                  type="button"
+                  data-bs-target="#carouselExampleControls"
+                  data-bs-slide="next"
+                >
+                  <span
+                    class="carousel-control-next-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
               </div>
             </div>
           </div>
@@ -120,7 +223,7 @@
           <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
               <h2 class="contact-us-title text-center pt-5">GET IN TOUCH</h2>
-              <form class="pt-3 pb-3" netlify>
+              <form class="pt-3 pb-3">
                 <div class="mb-3">
                   <label for="name" class="form-label">Name</label>
                   <input
@@ -129,7 +232,6 @@
                     id="name"
                     aria-describedby="name"
                     placeholder="Name"
-                    name="name"
                   />
                 </div>
                 <div class="mb-3">
@@ -140,7 +242,6 @@
                     id="company"
                     aria-describedby="company"
                     placeholder="Company"
-                    name="company"
                   />
                 </div>
                 <div class="mb-3">
@@ -151,7 +252,6 @@
                     id="phone"
                     aria-describedby="phone"
                     placeholder="Phone"
-                    name="phone"
                   />
                 </div>
                 <div class="mb-3">
@@ -161,7 +261,6 @@
                     class="form-control"
                     id="comments"
                     aria-describedby="comments"
-                    name="comments"
                   >
                   </textarea>
                 </div>
@@ -180,6 +279,11 @@
               <a href="/"
                 ><img src="./images/dcs-logo.png" alt="" class="footer-logo"
               /></a>
+              <p class="footer-address">
+                11146 Lindbergh Business Ct Suite 110<br />
+                St. Louis, MO<br />
+                63123
+              </p>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
               <p class="text-center pt-5 copyright-text">
