--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&family=Roboto+Slab:wght@700&family=Roboto:wght@400;700;900&display=swap"
       rel="stylesheet"
     />
-    <meta name="description" content="" />
+    <meta name="og:title" content="Diesel Core Solutions" />
+    <meta name="description" content="Buyers of all automitive and diesel cores" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
