--- a/index.html
+++ b/index.html
@@ -225,48 +225,52 @@
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
               <h2 class="contact-us-title text-center pt-5">GET IN TOUCH</h2>
               <form class="pt-3 pb-3" netlify>
-                <div class="mb-3">
-                  <label for="name" class="form-label">Name</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="name"
-                    aria-describedby="name"
-                    placeholder="Name"
-                  />
-                </div>
-                <div class="mb-3">
-                  <label for="company" class="form-label">Company</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="company"
-                    aria-describedby="company"
-                    placeholder="Company"
-                  />
-                </div>
-                <div class="mb-3">
-                  <label for="phone" class="form-label">Phone</label>
-                  <input
-                    type="tel"
-                    class="form-control"
-                    id="phone"
-                    aria-describedby="phone"
-                    placeholder="Phone"
-                  />
-                </div>
-                <div class="mb-3">
-                  <label for="comments" class="form-label">Comments</label>
-                  <textarea
-                    type="text"
-                    class="form-control"
-                    id="comments"
-                    aria-describedby="comments"
-                  >
-                  </textarea>
-                </div>
-                <button type="submit" class="btn-contact">Submit</button>
-              </form>
+  <div class="mb-3">
+    <label for="name" class="form-label">Name</label>
+    <input
+      type="text"
+      class="form-control"
+      id="name"
+      name="name"
+      aria-describedby="name"
+      placeholder="Name"
+    />
+  </div>
+  <div class="mb-3">
+    <label for="company" class="form-label">Company</label>
+    <input
+      type="text"
+      class="form-control"
+      id="company"
+      name="company"
+      aria-describedby="company"
+      placeholder="Company"
+    />
+  </div>
+  <div class="mb-3">
+    <label for="phone" class="form-label">Phone</label>
+    <input
+      type="tel"
+      class="form-control"
+      id="phone"
+      name="phone"
+      aria-describedby="phone"
+      placeholder="Phone"
+    />
+  </div>
+  <div class="mb-3">
+    <label for="comments" class="form-label">Comments</label>
+    <textarea
+      class="form-control"
+      id="comments"
+      name="comments"
+      aria-describedby="comments"
+      placeholder="Enter your comments here"
+    ></textarea>
+  </div>
+  <button type="submit" class="btn-contact">Submit</button>
+</form>
+
             </div>
           </div>
         </div>
