--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
                   >Download Buy Sheet</a
                 >
               </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  href="tel:3142013105"
+                  >Click To Call Now!</a
+                >
+              </li>
             </ul>
           </div>
         </div>
@@ -248,6 +255,17 @@
     />
   </div>
   <div class="mb-3">
+    <label for="company" class="form-label">Email</label>
+    <input
+      type="email"
+      class="form-control"
+      id="email"
+      name="email"
+      aria-describedby="company"
+      placeholder="Email"
+    />
+  </div>
+  <div class="mb-3">
     <label for="phone" class="form-label">Phone</label>
     <input
       type="tel"
@@ -289,6 +307,7 @@
                 St. Louis, MO<br />
                 63123
               </p>
+              <p class="footer-phone"><a href="tel:3142013105">(314) 201-3105</a></p>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
               <p class="text-center pt-5 copyright-text">
